--- a/pv/index.html
+++ b/pv/index.html
@@ -130,7 +130,7 @@ gtag("config", "G-VKE2BC69VN");
                 <div class="elementor-element elementor-element-67807649 elementor-align-center atrasado elementor-widget elementor-widget-button" data-id="67807649" data-element_type="widget" data-widget_type="button.default">
                 <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-            <a href="maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
+            <a href="https://maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
                         <span class="elementor-button-content-wrapper">
                         <span class="elementor-button-text">QUERO BAIXAR O APP AGORA </span>
         </span>
@@ -216,7 +216,7 @@ gtag("config", "G-VKE2BC69VN");
                 <div class="elementor-element elementor-element-221dde69 elementor-align-center elementor-widget elementor-widget-button" data-id="221dde69" data-element_type="widget" data-widget_type="button.default">
                 <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-            <a href="maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
+            <a href="https://maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
                         <span class="elementor-button-content-wrapper">
                         <span class="elementor-button-text">QUERO BAIXAR O APP AGORA ​</span>
         </span>
@@ -291,7 +291,7 @@ gtag("config", "G-VKE2BC69VN");
                 <div class="elementor-element elementor-element-1784cd4e elementor-align-center elementor-widget elementor-widget-button" data-id="1784cd4e" data-element_type="widget" data-widget_type="button.default">
                 <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-            <a href="maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
+            <a href="https://maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
                         <span class="elementor-button-content-wrapper">
                         <span class="elementor-button-text">QUERO BAIXAR O APP AGORA ​</span>
         </span>
@@ -338,7 +338,7 @@ gtag("config", "G-VKE2BC69VN");
                 <div class="elementor-element elementor-element-a823192 elementor-align-center elementor-widget elementor-widget-button" data-id="a823192" data-element_type="widget" data-widget_type="button.default">
                 <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
-            <a href="maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
+            <a href="https://maquinadiaria.fun/burger-king" class="elementor-button-link elementor-button elementor-size-md" role="button">
                         <span class="elementor-button-content-wrapper">
                         <span class="elementor-button-text">GARANTIR ACESSO</span>
         </span>
